k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: budget-famille
  labels:
    app.kubernetes.io/name: budget-famille
    app.kubernetes.io/version: "2.3.0"
